[project]
name = "pyethercat"
version = "0.0.1"
authors = [
  { name="Jeff Anderson", email="kj4tmp@gmail.com" },
]
description = "An EtherCAT MainDevice in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.urls]
Homepage = "https://github.com/kj4tmp/pyethercat"
Issues = "https://github.com/kj4tmp/pyethercat/issues"