[project]
name = "pyethercat"
version = "0.0.1"
authors = [
  { name="Jeff Anderson", email="kj4tmp@gmail.com" },
]
description = "An EtherCAT MainDevice in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[project.urls]
Homepage = "https://github.com/kj4tmp/pyethercat"
Issues = "https://github.com/kj4tmp/pyethercat/issues"