[project]
name = "pyecm"
version = "0.0.3"
authors = [
  { name="Jeff Anderson", email="kj4tmp@gmail.com" },
]
description = "An EtherCAT MainDevice in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy"]

[build-system]
requires = ["scikit-build-core >=0.9.1", "typing_extensions"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.9"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[project.urls]
Homepage = "https://github.com/kj4tmp/pyecm"
Issues = "https://github.com/kj4tmp/pyecm/issues"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Optional: run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest==8.1.1"

# Needed for full C++17 support on macOS
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.cibuildwheel.windows]
archs = ["auto64"] # skip 32-bit on windows since stub generation is broken

# pyproject.toml
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
